# swagger_server/models/__init__.py
@@ -4,7 +4,9 @@
 from __future__ import absolute_import
 # import models into model package
 from swagger_server.models.area import Area
+from swagger_server.models.found import Found
 from swagger_server.models.found_treasure import FoundTreasure
 from swagger_server.models.game import Game
+from swagger_server.models.hint import Hint
 from swagger_server.models.treasure import Treasure
 from swagger_server.models.user import User
