# swagger_server/models/found.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Found(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, user_id: float=None, proof: str=None):  # noqa: E501
+        """Found - a model defined in Swagger
+
+        :param user_id: The user_id of this Found.  # noqa: E501
+        :type user_id: float
+        :param proof: The proof of this Found.  # noqa: E501
+        :type proof: str
+        """
+        self.swagger_types = {
+            'user_id': float,
+            'proof': str
+        }
+
+        self.attribute_map = {
+            'user_id': 'userId',
+            'proof': 'proof'
+        }
+
+        self._user_id = user_id
+        self._proof = proof
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Found':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Found of this Found.  # noqa: E501
+        :rtype: Found
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def user_id(self) -> float:
+        """Gets the user_id of this Found.
+
+
+        :return: The user_id of this Found.
+        :rtype: float
+        """
+        return self._user_id
+
+    @user_id.setter
+    def user_id(self, user_id: float):
+        """Sets the user_id of this Found.
+
+
+        :param user_id: The user_id of this Found.
+        :type user_id: float
+        """
+
+        self._user_id = user_id
+
+    @property
+    def proof(self) -> str:
+        """Gets the proof of this Found.
+
+
+        :return: The proof of this Found.
+        :rtype: str
+        """
+        return self._proof
+
+    @proof.setter
+    def proof(self, proof: str):
+        """Sets the proof of this Found.
+
+
+        :param proof: The proof of this Found.
+        :type proof: str
+        """
+
+        self._proof = proof
