# swagger_server/models/hint.py
@@ -1,0 +1,90 @@
+# coding: utf-8
+
+from __future__ import absolute_import
+from datetime import date, datetime  # noqa: F401
+
+from typing import List, Dict  # noqa: F401
+
+from swagger_server.models.base_model_ import Model
+from swagger_server import util
+
+
+class Hint(Model):
+    """NOTE: This class is auto generated by the swagger code generator program.
+
+    Do not edit the class manually.
+    """
+
+    def __init__(self, image_url: str=None, text: str=None):  # noqa: E501
+        """Hint - a model defined in Swagger
+
+        :param image_url: The image_url of this Hint.  # noqa: E501
+        :type image_url: str
+        :param text: The text of this Hint.  # noqa: E501
+        :type text: str
+        """
+        self.swagger_types = {
+            'image_url': str,
+            'text': str
+        }
+
+        self.attribute_map = {
+            'image_url': 'imageUrl',
+            'text': 'text'
+        }
+
+        self._image_url = image_url
+        self._text = text
+
+    @classmethod
+    def from_dict(cls, dikt) -> 'Hint':
+        """Returns the dict as a model
+
+        :param dikt: A dict.
+        :type: dict
+        :return: The Hint of this Hint.  # noqa: E501
+        :rtype: Hint
+        """
+        return util.deserialize_model(dikt, cls)
+
+    @property
+    def image_url(self) -> str:
+        """Gets the image_url of this Hint.
+
+
+        :return: The image_url of this Hint.
+        :rtype: str
+        """
+        return self._image_url
+
+    @image_url.setter
+    def image_url(self, image_url: str):
+        """Sets the image_url of this Hint.
+
+
+        :param image_url: The image_url of this Hint.
+        :type image_url: str
+        """
+
+        self._image_url = image_url
+
+    @property
+    def text(self) -> str:
+        """Gets the text of this Hint.
+
+
+        :return: The text of this Hint.
+        :rtype: str
+        """
+        return self._text
+
+    @text.setter
+    def text(self, text: str):
+        """Sets the text of this Hint.
+
+
+        :param text: The text of this Hint.
+        :type text: str
+        """
+
+        self._text = text
